Fix text alignment in the Server Cache admin dashboard widget.
The Server Cache admin dashboard widget's element ID changed at one
point, but the CSS wasn't updated accordingly. This caused some styles
to not take effect, which resulted in the labels in Server Cache
appearing center-aligned instead of left-aligned.

The style has been updated to reflect the new element ID.

The Activity Widget styling was also wrong, but those styles were no
longer relevant to the current design. They've been removed entirely.

Testing Done:
Viewed the admin dashboard and saw the corrected styling.

Reviewed at https://reviews.reviewboard.org/r/13436/

--- a/reviewboard/static/rb/css/pages/admin/dashboard.less
+++ b/reviewboard/static/rb/css/pages/admin/dashboard.less
@@ -139,25 +139,10 @@
 
 
 /* Server Cache widget */
-#server-cache-widget {
+#admin-widget-server-cache-widget {
   td, th {
     font-size: 10px;
     text-align: left;
-  }
-}
-
-/* Review Board Activity widget */
-#activity-graph-widget {
-  .legendLabel {
-    font-size: 10px;
-  }
-
-  .legend-btn {
-    position: absolute;
-    left: 30px;
-    top: 10px;
-    display: none;
-    cursor: pointer;
   }
 }
 
